# Luvdisc-Spec-LLVM

./: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
docker/: Dockerfile  README.md  build.sh
docs/: DETERMINISM_SPEC.md
public/samples/: hello_solana.ll
solana-program/: Cargo.toml  README.md
solana-program/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
src/: App.tsx  index.css
src/components/: BuildResult.tsx  DeterminismChecklist.tsx  Navbar.tsx  UploadDropZone.tsx
src/lib/: determinism-checks.ts  llvm-parser.ts  solana-anchor.ts
src/pages/: About.tsx  Home.tsx  Spec.tsx  Upload.tsx  Verify.tsx
